--- a/src/components/MainLayout.css
+++ b/src/components/MainLayout.css
@@ -1,3 +1,15 @@
+.MainLayout-layout {
+  min-height: 100vh;
+}
+
+.MainLayout-header {
+  background: white;
+}
+
+.MainLayout-headerDiv {
+  display: flex;
+}
+
 .MainLayout-buttonDiv {
   display: flex;
   flex-grow: 1;
@@ -19,4 +31,8 @@
   color: white;
   padding: 12px;
   background-color: #122335;
+}
+
+.MainLayout-footerSpacing {
+  margin-top: 1rem; 
 }
